[package]
name = "gh-pr-get-comments"
version = "0.1.0"
edition = "2024"
publish = false
description = "GitHub CLI extension to fetch inline PR review comments"
repository = "https://github.com/hfm/gh-pr-get-comments"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
url = "2"
